--- a/css/matery.css
+++ b/css/matery.css
@@ -2,7 +2,7 @@
 /*小屏幕下(手机类)的样式*/
 @media only screen and (max-width: 601px) {
     .container {
-        width: 95%;
+        width: 100%;
     }
 }
 
@@ -253,11 +253,11 @@ mark {
 }
 
 .progress-bar {
-    height: 4px;
+    height: 8px;
     position: fixed;
     bottom: 0;
     z-index: 300;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background: linear-gradient(to right, #202020 0%, #404040 100%);
     opacity: 0.8;
 }
 
@@ -290,13 +290,15 @@ header nav .brand-span {
 }
 
 header .brand-logo .logo-img {
-    height: 45px;
+    height: 36px;
     vertical-align: middle;
     padding-bottom: 6px;
 }
 
 header .brand-logo .logo-span {
-    font-size: 1.6rem;
+    font-size: 1.25rem;
+    vertical-align: top;
+    text-shadow: 2px 2px 10px #000000;
 }
 
 /*修改顶部 logo 的文字垂直对齐为 top，避免默认 middle 看起来偏下*/
@@ -387,11 +389,11 @@ header .side-nav .social-link {
 }
 
 .cover-btns a:hover {
-    border: 1px solid #f44336;
-    background-color: #f44336;
-    box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42),
+    border: 1px solid #202020;
+    background-color: #202020;
+    box-shadow: 0 14px 26px -12px rgba(32, 32, 32, 0.42),
     0 4px 23px 0 rgba(0, 0, 0, 0.12),
-    0 8px 10px -5px rgba(233, 30, 99, 0.2);
+    0 8px 10px -5px rgba(32, 32, 32, 0.2);
 }
 
 .cover-btns a i {
@@ -578,6 +580,7 @@ header .go-back i {
     line-height: 1.2em;
     margin-bottom: 20px;
     position: relative;
+    text-shadow: 2px 2px 10px #000000;
 }
 
 .bg-cover .description {
@@ -585,6 +588,7 @@ header .go-back i {
     font-size: 1.25rem;
     line-height: 1.4em;
     color: #eee;
+    text-shadow: 2px 2px 10px #000000;
 }
 
 .bg-cover .post-title {
@@ -1904,7 +1908,7 @@ footer .copy-right {
 }
 
 .top-scroll .btn-floating {
-    background: linear-gradient(to bottom right, #FF5E3A 0%, #FF2A68 100%);
+    background: linear-gradient(to bottom right, #404040 0%, #606060 100%);
     width: 48px;
     height: 48px;
 }
